--- a/photo.html
+++ b/photo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 		<title>一些照片</title>
 		<link rel="stylesheet" href="css/css.css" />
 	</head>
