--- a/about.html
+++ b/about.html
@@ -53,7 +53,9 @@
             </section>
             <section id="exp">
             	<h2>早年经历</h2>
-            	<p>乐队主唱丹·雷诺斯是拉斯维加斯人，2008年在犹他州遇到吉他手韦恩·瑟蒙。当时主唱丹正在上学，而韦恩则已经从伯克利音乐学院毕业。在经历过数次团队阵容变化之后，乐队在拉斯维加斯正式成立。成员包括丹和韦恩以及新加入的本·麦基、安德鲁·托尔曼和布里特妮·托尔曼。乐队成员一起住在拉斯维加斯，并在那里录制发行了三张EP</p>
+            	<p>乐队主唱丹·雷诺斯是拉斯维加斯人，2008年在犹他州遇到吉他手韦恩·瑟蒙。当时主唱丹正在上学，而韦恩则已经从伯克利音乐学院毕业。</p>
+            	<br />
+            	<p>在经历过数次团队阵容变化之后，乐队在拉斯维加斯正式成立。成员包括丹和韦恩以及新加入的本·麦基、安德鲁·托尔曼和布里特妮·托尔曼。乐队成员一起住在拉斯维加斯，并在那里录制发行了三张EP</p>
             </section>
 		</article>
 		<script type="text/javascript" src="js/js.js"></script>
